# Information-Retrival-Exam

./: CMakeLists.txt  README.md  makefile
cran/: cran.all copy.1400
include/: console.h  gui.h  queryparser.h  test.h
include/IO/: bin_reader.h  doc_retriever.h  one_timer_IO.h  reduced_one_timer_IO.h
include/utils/: encoder_decoder.h  reverse_word.h  stack.h
src/: console.c  gui.c  main.c  queryparser.c  test.c
src/IO/: bin_reader.c  doc_retriever.c  one_timer_IO.c  reduced_one_timer_IO.c
src/utils/: encoder_decoder.c  reverse_word.c  stack.c
